--- a/pyproject.toml
+++ b/pyproject.toml
@@ -7,9 +7,12 @@ requires-python = ">=3.12"
 dependencies = [
     "anthropic[vertex]>=0.66.0",
     "boto3>=1.40.23",
+    "langchain>=1.1.0",
     "langchain-aws>=0.2.31",
     "langchain-chroma>=0.2.6",
-    "langchain-experimental>=0.3.4",
+    "langchain-community>=0.4.1",
+    "langchain-core>=1.1.0",
+    "langchain-experimental>=0.4.0",
     "langchain-google-vertexai>=2.0.28",
     "langchain-postgres>=0.0.16",
     "langchain-redis>=0.2.3",
